<resources>
    <string name="app_name">Aeedee Android Chat</string>
    <string name="splash_image">SplashImage</string>

    <string name="navigation_portal_string">Portal</string>
    <string name="navigation_account_string">Account</string>
    <string name="navigation_search_string">Search</string>
    <string name="navigation_chats_string">Chats</string>
    <string name="navigation_home_string">Home</string>
    <string name="search_text">Search…</string>
    <string name="chats_text">Chats</string>
    <string name="start_a_chat_text">Start a Chat</string>
    <string name="followers_s_list">Followers (%s)</string>
    <string name="no_internet_connection">No Internet Connection found. Check your connection or try again</string>
    <string name="add_followers">Add Followers</string>
    <string name="message_here_hint">Message here…</string>
    <string name="sent_text">Sent</string>
    <string name="delivered_text">Delivered</string>
    <string name="read_text">Read</string>
    <string name="delete_chats_text">Delete chats</string>
    <string name="aa_alphabets_text">Aa</string>
    <string name="this_message_was_deleted_text">This message was deleted</string>
    <string name="you_deleted_this_message_text">You deleted this message</string>
    <string name="cancel_text">Cancel</string>

    <string name="regular_text_view">Regular TextView %s</string>
    <string name="forward_to_title">Forward to…</string>
    <string name="forward_text">Forward</string>
    <string name="offline_text">offline</string>

</resources>