<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_finger_print_icon"
        android:title="@string/navigation_portal_string" />

    <item
        android:id="@+id/navigation_latest"
        android:icon="@drawable/ic_finger_print_icon"
        android:title="@string/navigation_account_string" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_finger_print_icon"
        android:title="@string/navigation_search_string" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_finger_print_icon"
        android:title="@string/navigation_chats_string" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_finger_print_icon"
        android:title="@string/navigation_home_string" />

</menu>