<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.prng.aeedee_android_chat.view.chat.ChatUserListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA"
        tools:context=".view.chat.ChatUserListActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvChatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="10dp"
            android:text="@string/chats_text"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@drawable/search_corner_curve_edit_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atvChatTitle">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aivSearchIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_icon" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/search_text"
                android:onTextChanged="@{viewModel::afterSearchTextChanged}"
                android:paddingHorizontal="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="#4E4E4E"
                android:textCursorDrawable="@drawable/cursor_line_with_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/aivSearchIcon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
        <!--            android:id="@+id/srlRefreshData"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/clSearch">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSearch">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvChatUserList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="7"
                tools:listitem="@layout/chat_user_list_item_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmpty"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clSearch">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aivChatIcon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/atbStartAChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:background="@drawable/btn_start_a_chat_bg"
                android:paddingHorizontal="30dp"
                android:text="@string/start_a_chat_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aivChatIcon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/add_followers"
            android:src="@drawable/ic_fab_chat_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearanceOverlay="@style/fab_user_chat"
            app:tint="@color/blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>